# libxinux

./: .gitignore  Cargo.toml  flake.nix  readme.md
.github/workflows/: test.yml
libxinux-helper/: Cargo.toml
libxinux-helper/src/: main.rs
src/: error.rs  lib.rs
src/config/: configfile.rs
src/homemanager/: list.rs
src/metadata/: database.rs  revision.rs  search.rs
src/nixenv/: mod.rs
src/nixos/: list.rs
src/pkgs/: mod.rs
src/pkgs/any/: mod.rs  schema.rs
src/pkgs/aur/: dump.json  mod.rs  schema.rs
src/pkgs/groups/: mod.rs
src/pkgs/std/: mod.rs  schema.rs
src/profile/: list.rs  update.rs
src/utils/: epocher.rs  misc.rs  mod.rs
