[package]
name = "libxinux"
version = "1.0.2"
edition = "2021"
homepage = "https://github.com/xinux-org/libxinux"
repository = "https://github.com/xinux-org/libxinux"
description = "Collection of API & ABI for Xinux"
keywords = ["xinux", "libxinux", "linux", "sdk", "api"]
readme = "readme.md"
license = "GPL-3.0"
authors = [
  "Sokhibjon Orzikulov <orzklv.uz>",
  "Victor Fuentes <vlinkz@snowflakeos.org>",
]

[lib]
name = "libxinux"

[dependencies]
fuzzy-matcher = { version = "0.3.7" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "brotli"] }
nix-editor = "0.3.0"
pretty_env_logger = "0.5.0"
anyhow = "1.0.95"
csv = "1.3.1"
log = "0.4.25"
lazy_static = "1.5.0"
brotli = "7.0.0"
rusqlite = "0.33.0"
rayon = "1.10.0"
tantivy = { version = "0.22.0", features = ["mmap"] }
